--- a/src/components/html-layout.astro
+++ b/src/components/html-layout.astro
@@ -8,7 +8,7 @@ import './../assets/globals.css';
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{Astro.props.title}</title>
-    <link rel="shortcut icon" href="/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href={import.meta.env.BASE_URL + "/favicon-32x32.png"} type="image/x-icon">
     <slot name="head" />
 </head>
 <body>
