--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,12 @@ const challenges = [
 	{
 		title: "QR Code Component",
 		description: "Create a QR Code component",
-		link: "/newbie/qr-code-component",
+		link: import.meta.env.BASE_URL + "/newbie/qr-code-component",
 	},
 	{
 		title: "Blog Preview Card",
 		description: "Create a blog preview card",
-		link: "/newbie/blog-preview-card",
+		link: import.meta.env.BASE_URL + "/newbie/blog-preview-card",
 	},
 ]
 ---
