--- a/src/pages/newbie/blog-preview-card.astro
+++ b/src/pages/newbie/blog-preview-card.astro
@@ -12,7 +12,7 @@ import avatar from '../../assets/images/blog-preview-card/image-avatar.webp'
         <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@600;800&display=swap" rel="stylesheet" />
     </Fragment>
     <Fragment slot="header" >    
-        <a href="/" class="absolute p-3 shadow hover:shadow-lg focus-visible:shadow-lg rounded-full bg-white top-2 left-2">
+        <a href={import.meta.env.BASE_URL} class="absolute p-3 shadow hover:shadow-lg focus-visible:shadow-lg rounded-full bg-white top-2 left-2">
             <ArrowLeft />
         </a>
     </Fragment>
