create order summary component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,11 @@ const challenges = [
 		description: "Create a blog preview card",
 		link: import.meta.env.BASE_URL + "/newbie/blog-preview-card",
 	},
+	{
+		title: "Order Summary Component",
+		description: "Create an order summary component",
+		link: import.meta.env.BASE_URL + "/newbie/order-summary-component",
+	}
 ]
 ---
 
