--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -9,4 +9,12 @@
 	--bpc-primary: hsl(47, 88%, 63%);
 	--bpc-secondary: hsl(0, 0%, 50%);
 	--bpc-font-family: 'Figtree', sans-serif;
+
+	/* Order Summary Component */
+	--osc-font-family: 'Red Hat Display', sans-serif;
+	--osc-pale-blue: hsla(225, 100%, 94%);
+	--osc-bright-blue: hsla(245, 75%, 52%);
+	--osc-very-pale-blue: hsla(225, 100%, 98%);
+	--osc-desaturated-blue: hsla(224, 23%, 55%);
+	--osc-dark-blue: hsla(223, 47%, 23%);
 }
