--- a/src/pages/newbie/qr-code-component.astro
+++ b/src/pages/newbie/qr-code-component.astro
@@ -15,7 +15,7 @@ import qrImage from '../../assets/images/qr-code-component/image-qr-code.png'
         />
     </Fragment>
     <Fragment slot="header" >    
-        <a href={import.meta.env.BASE_URL} class="absolute p-3 shadow hover:shadow-lg focus-visible:shadow-lg rounded-full bg-white top-2 left-2">
+        <a href={import.meta.env.BASE_URL} class="hidden md:block absolute p-3 shadow hover:shadow-lg z-20 focus-visible:shadow-lg rounded-full bg-white top-2 left-2">
             <ArrowLeft />
         </a>
     </Fragment>
